[gd_scene load_steps=4 format=2]

[ext_resource path="res://Creatures/Turtle.png" type="Texture" id=1]
[ext_resource path="res://fishbowl.png" type="Texture" id=2]
[ext_resource path="res://UI/CreatureSpawnUI.gd" type="Script" id=3]

[node name="CreatureSpawnUI" type="TextureButton"]
margin_right = 189.0
margin_bottom = 142.0
texture_normal = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatureSprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 92, 78 )
scale = Vector2( 0.224359, 0.224359 )
texture = ExtResource( 1 )

[node name="Cost" type="Label" parent="."]
modulate = Color( 0.87451, 1, 0, 1 )
margin_left = 53.0
margin_top = 44.0
margin_right = 93.0
margin_bottom = 58.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exp" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 100.0
margin_top = 44.0
margin_right = 140.0
margin_bottom = 58.0
text = "10/20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="."]
modulate = Color( 0.196078, 1, 0, 1 )
margin_left = 65.0
margin_top = 100.0
margin_right = 105.0
margin_bottom = 114.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 82.0
margin_top = 100.0
margin_right = 122.0
margin_bottom = 114.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="."]
modulate = Color( 1, 0.466667, 0, 1 )
margin_left = 99.0
margin_top = 100.0
margin_right = 139.0
margin_bottom = 114.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_CreatureSpawnUI_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CreatureSpawnUI_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_CreatureSpawnUI_pressed"]
